--- a/adressbook-web-tests/build.gradle
+++ b/adressbook-web-tests/build.gradle
@@ -5,5 +5,7 @@ mavenCentral()
 }
 
 dependencies {
-compile 'org.testng:testng:6.11'
+    compile 'org.testng:testng:6.11'
+    compile 'org.seleniumhq.selenium:selenium-java:3.6.0'
+
 }
