--- a/adressbook-web-tests/build.gradle
+++ b/adressbook-web-tests/build.gradle
@@ -8,4 +8,6 @@ dependencies {
     compile 'org.testng:testng:6.11'
     compile 'org.seleniumhq.selenium:selenium-java:3.6.0'
     compile 'org.hamcrest:java-hamcrest:2.0.0.0'
+    testCompile 'com.codeborne:selenide:4.8'
 }
+
